[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.3",
    "dspy-ai>=3.0.3",
    "openai>=2.3.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.2",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "streamlit>=1.50.0",
]
