[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.3",
    "dspy-ai>=3.0.3",
    "openai>=2.3.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.2",
    "pygithub>=2.8.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
